--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 An implementation of Hierarchical State Machine in ActionScript3.0 for AI bot/agent in a video games
 
+HSM is a FSM too, but unlike the traditional FSM, it can handle the states in hierarchy. You can define detailed states in a state and group states which have same target state.
+So it is better implementation of state machine if the agent have complex and a lot of states.
+
 The implementation is almost similiar with FSM, but in HSM there are two types of state which extends BaseHSMState Class.
 1. Composite State: State which have a children
 2. Atomic State: State with no children
